[package]
name = "libxcrypt-sys"
build = "build.rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "libxcrypt bindings"
homepage = "https://crates.io/crates/libxcrypt-sys"
documentation = "https://docs.rs/crate/libxcrypt-sys/latest"
repository = "https://github.com/pldubouilh/libxcrypt-sys"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.64.0"
